--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,18 @@ body{
   background-color:#f4f4f4;
 }
 
-/* Global */
-.container{
-  width:80%;
-  margin:auto;
-  overflow:hidden;
+/* GLOBAL */
+.container,
+footer {
+  overflow: hidden;
+  max-width: 1800px;
+  margin: auto;
 }
 
-ul{
-  margin:0;
-  padding:0;
+input {
+  padding: 4px;
+  height: 25px;
+  width: 250px;
 }
 
 .button_1{
@@ -34,172 +36,166 @@ ul{
   margin-bottom:10px;
 }
 
-/* Header **/
-header{
-  background:#35424a;
-  color:#ffffff;
-  padding-top:30px;
-  min-height:70px;
-  border-bottom:#e8491d 3px solid;
+/* HEADER */
+header .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(70px, auto);
+  text-align: center;
+  background: #35424A;
+  color: white;
+  border-bottom: 3px solid #E8491D;
 }
 
-header a{
-  color:#ffffff;
-  text-decoration:none;
+header h1 {
+  margin: 0;
+  padding: 30px;
+}
+
+header .highlight,
+header .current a {
+  color: #E8491D;
+  font-weight: bold;
+}
+
+header nav {
+  margin-top: 44px;
+}
+
+header ul {
+  margin: 0;
+  padding: 0;
+}
+
+header a {
+  text-decoration: none;
   text-transform: uppercase;
-  font-size:16px;
+  color: white;
+  font-size: 16px;
 }
 
-header li{
-  float:left;
-  display:inline;
-  padding: 0 20px 0 20px;
+header li {
+  display: inline;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-header #branding{
-  float:left;
+header a:hover {
+  color: #ccc;
+  font-weight: bold;
 }
 
-header #branding h1{
-  margin:0;
+/* SHOWCASE */
+#showcase .container {
+  background: url('../img/showcase.jpg') 0 -400px no-repeat;
+  min-height: 400px;
+  color: white;
+  text-align: center;
 }
 
-header nav{
-  float:right;
-  margin-top:10px;
+#showcase h1 {
+  font-size: 55px;
+  margin-top: 100px;
 }
 
-header .highlight, header .current a{
-  color:#e8491d;
-  font-weight:bold;
+#showcase p {
+  font-size: 20px;
 }
 
-header a:hover{
-  color:#cccccc;
-  font-weight:bold;
+/* NEWSLETTER */
+#newsletter .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  background: #35424a;
+  color: white;
+  text-align: center;
 }
-
-/* Showcase */
-#showcase{
-  min-height:400px;
-  background:url('../img/showcase.jpg') no-repeat 0 -400px;
-  text-align:center;
-  color:#ffffff;
+#newsletter h1 {
+  margin-top: 30px;
 }
-
-#showcase h1{
-  margin-top:100px;
-  font-size:55px;
-  margin-bottom:10px;
-}
-
-#showcase p{
-  font-size:20px;
-}
-
-/* Newsletter */
-#newsletter{
-  padding:15px;
-  color:#ffffff;
-  background:#35424a
-}
-
-#newsletter h1{
-  float:left;
-}
-
 #newsletter form {
-  float:right;
-  margin-top:15px;
+  margin-top: 30px;
 }
 
-#newsletter input[type="email"]{
-  padding:4px;
-  height:25px;
-  width:250px;
-}
-
-/* Boxes */
-#boxes{
-  margin-top:20px;
-}
-
-#boxes .box{
-  float:left;
+/* BOXES */
+#boxes .container {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
+  grid-gap: 10px;
   text-align: center;
-  width:30%;
-  padding:10px;
+  margin-top: 20px;
 }
 
-#boxes .box img{
-  width:90px;
+#boxes img {
+  width: 90px;
 }
 
-/* Sidebar */
-aside#sidebar{
-  float:right;
-  width:30%;
-  margin-top:10px;
+.box {
+  padding: 10px;
 }
 
-aside#sidebar .quote input, aside#sidebar .quote textarea{
-  width:90%;
-  padding:5px;
-}
-
-/* Main-col */
-article#main-col{
-  float:left;
-  width:65%;
-}
-
-/* Services */
-ul#services li{
-  list-style: none;
-  padding:20px;
-  border: #cccccc solid 1px;
-  margin-bottom:5px;
-  background:#e6e6e6;
-}
-
-footer{
-  padding:20px;
-  margin-top:20px;
-  color:#ffffff;
-  background-color:#e8491d;
+/* FOOTER */
+footer {
+  background: #E8491D;
+  color: white;
   text-align: center;
+  padding: 20px;
+  margin-top: 20px;
 }
 
-/* Media Queries */
-@media(max-width: 768px){
-  header #branding,
-  header nav,
-  header nav li,
-  #newsletter h1,
-  #newsletter form,
-  #boxes .box,
-  article#main-col,
-  aside#sidebar{
-    float:none;
-    text-align:center;
-    width:100%;
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 768px) {
+  header .container {
+    grid-template-columns: 1fr;
   }
 
-  header{
-    padding-bottom:20px;
+  header h1,
+  header nav {
+    margin-top: 10px;
+    padding: 0;
   }
 
-  #showcase h1{
-    margin-top:40px;
+  #newsletter .container {
+    grid-template-columns: 1fr;
   }
 
-  #newsletter button, .quote button{
-    display:block;
-    width:100%;
+  #newsletter h1 {
+    margin-bottom: 0;
   }
 
-  #newsletter form input[type="email"], .quote input, .quote textarea{
-    width:100%;
-    margin-bottom:5px;
+  #newsletter form {
+    margin: 0;
+  }
+
+  #newsletter input {
+    display: block;
+    margin: auto;
+    width: 60%;
+    box-sizing: border-box;
+    height: 38px;
+  }
+
+  #newsletter button {
+    display: block;
+    margin: 5px auto;
+    width: 60%;
+  }
+
+  #boxes .container {
+    grid-template-columns: 1fr;
+    max-width: 60%;
   }
 }
+
+@media screen and (max-width: 375px) {
+  header li {
+    display: block;
+    padding: 5px;
+  }
+}
+
+
+/**/
